functest_kubernetes/sylva/k8s/huge1gi.yaml
# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: stack-validation
  name: test-huge1gi
  labels:
    app.kubernetes.io/name: test-huge1gi
    app.kubernetes.io/component: test-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test-huge1gi
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-huge1gi
        app.kubernetes.io/component: backend
    spec:
      securityContext:
        runAsNonRoot: true
        fsGroup: 65432
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: script
          configMap:
            name: run-sh
            defaultMode: 0555
        - name: hugepages
          emptyDir:
            medium: HugePages
      containers:
        - name: test-huge1gi
          image: busybox:1.37
          imagePullPolicy: Always
          command: ["/bin/sh"]
          args: ["/scripts/run.sh"]
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
              hugepages-1Gi: 1Gi
            limits:
              cpu: 100m
              memory: 100Mi
              hugepages-1Gi: 1Gi
          volumeMounts:
            - name: hugepages
              mountPath: /dev/hugepages
              readOnly: false
            - name: script
              mountPath: /scripts
              readOnly: true
          securityContext:
            runAsNonRoot: true
            runAsUser: 65432
            runAsGroup: 65432
            allowPrivilegeEscalation: false
            capabilities:
              add: ["IPC_LOCK"]
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
