functest_kubernetes/sylva/k8s/huge2mi.yaml
# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: stack-validation
  name: test-huge2mi
  labels:
    app.kubernetes.io/name: test-huge2mi
    app.kubernetes.io/component: test-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test-huge2mi
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-huge2mi
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: test-huge2mi
          image: localhost:5000/validation
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
              hugepages-2Mi: 200Mi
            limits:
              cpu: 100m
              memory: 100Mi
              hugepages-2Mi: 200Mi
          volumeMounts:
            - mountPath: /dev/hugepages
              name: hugepages
              readOnly: false
          securityContext:
            runAsNonRoot: true
            runAsUser: 65432
            runAsGroup: 65432
            allowPrivilegeEscalation: false
            capabilities:
              add: ["IPC_LOCK"]
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
      volumes:
        - name: hugepages
          emptyDir:
            medium: HugePages
