functest_kubernetes/sylva/k8s/multi.yaml
# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: stack-validation
  name: test-multi
  labels:
    app.kubernetes.io/name: test-multi
    app.kubernetes.io/component: test-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test-multi
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-multi
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: test-multi
          image: localhost:5000/validation
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 1
              memory: 100Mi
            limits:
              cpu: 1
              memory: 100Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65432
            runAsGroup: 65432
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
