functest_kubernetes/sylva/k8s/tunedrt.yaml
# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: stack-validation
  name: test-tunedrt
  labels:
    app.kubernetes.io/name: test-tunedrt
    app.kubernetes.io/component: test-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: test-tunedrt
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: test-tunedrt
        app.kubernetes.io/component: backend
    spec:
      containers:
        - name: test-tunedrt
          image: localhost:5000/validation
          imagePullPolicy: Always
          volumeMounts:
            - name: varlogtuned
              mountPath: /var/log/tuned
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65432
            runAsGroup: 65432
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: true
      volumes:
        - name: varlogtuned
          hostPath:
            path: /var/log/tuned
            type: Directory
