functest_kubernetes/sylva/k8s/netpolicy.yaml
# Copyright (C) 2025 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
#
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: stack-validation
  name: test-access
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: "true"
